# qfengine

./: .gitignore  README.md  index.html  pyproject.toml  test_demo.py
data/date=1995-01-03/: data.parquet
data/date=1995-01-04/: data.parquet
data/date=1995-01-05/: data.parquet
data/date=1995-01-06/: data.parquet
data/date=1995-01-09/: data.parquet
data/date=1995-01-10/: data.parquet
data/date=1995-01-11/: data.parquet
data/date=1995-01-12/: data.parquet
data/date=1995-01-13/: data.parquet
data/date=1995-01-16/: data.parquet
data/date=1995-01-17/: data.parquet
data/date=1995-01-18/: data.parquet
data/date=1995-01-19/: data.parquet
data/date=1995-01-20/: data.parquet
data/date=1995-01-23/: data.parquet
data/date=1995-01-24/: data.parquet
data/date=1995-01-25/: data.parquet
data/date=1995-01-26/: data.parquet
data/date=1995-01-27/: data.parquet
data/date=1995-02-06/: data.parquet
data/date=1995-02-07/: data.parquet
data/date=1995-02-08/: data.parquet
data/date=1995-02-09/: data.parquet
data/date=1995-02-10/: data.parquet
data/date=1995-02-13/: data.parquet
data/date=1995-02-14/: data.parquet
data/date=1995-02-15/: data.parquet
data/date=1995-02-16/: data.parquet
data/date=1995-02-17/: data.parquet
data/date=1995-02-20/: data.parquet
data/date=1995-02-21/: data.parquet
data/date=1995-02-22/: data.parquet
data/date=1995-02-23/: data.parquet
data/date=1995-02-24/: data.parquet
data/date=1995-02-27/: data.parquet
data/date=1995-02-28/: data.parquet
data/date=1995-03-01/: data.parquet
qfengine/: __init__.py
(+7494 files in other folders)
