[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qfengine"
version = "0.1.0"
description = "Precise QFQ/HFQ price adjustment and backtesting engine for quantitative finance"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]

# 核心依赖（必须安装）
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas-market-calendars>=4.0.0"
]

# 可选依赖
[project.optional-dependencies]
akshare = ["akshare>=1.0.0"]  # 自动获取分红送股数据
dev = ["pytest", "black", "jupyter"]

[project.urls]
Homepage = "https://github.com/yourname/qfengine"